# telegram-offers-api

./: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml  env.example  pyproject.toml
app/: main.py
app/services/: DbClient.py
frontend/: app.py
tests/: test_filter.py
